--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ header {
   color: white;
   padding: 0.05rem 1rem;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
+  margin-right: 10px;
 }
 
 .user-goal button:hover,
@@ -75,4 +76,12 @@ header {
   background-color: #ec3169;
   border-color: #ec3169;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.26);
+}
+
+.binding-class {
+  display: none;
+}
+
+.binding-class.active {
+  display: block;
 }
